# sky-menu

./: Cargo.toml
.github/workflows/: rust.yml
src/: application.rs  config.rs  error.rs  icon.rs  inotify_listener.rs  keyboard.rs  keyboard_listener.rs  launcher.rs  main.qml  main.rs  search.rs  searchable_list.rs  style.rs  utility.rs  widgets.rs
