[package]
name = "launcher"
version = "0.1.0"
authors = ["Teddy Heinen <teddy@heinen.dev>"]
edition = "2018"

[dependencies]
qmetaobject = "0.1.4"
cstr = "0.1.7"
log = "0.4.8"
env_logger = "0.7.1"
fuzzy-matcher = "0.3.4"
freedesktop_entry_parser = "0.2.2"
input = "0.5.0"
libc = "0.2"
rust-ini = "0.15"
linicon = "0.4.1"
cached = "0.13.1"