[package]
name = "sky-menu"
version = "0.1.0"
authors = ["Teddy Heinen <teddy@heinen.dev>"]
edition = "2018"

[dependencies]
iced = {version = "0.2", features = ["debug", "image", "svg"] }
iced_native = "0.3"
cstr = "0.1.7"
log = "0.4.8"
env_logger = "0.7.1"
fuzzy-matcher = "0.3.4"
freedesktop_entry_parser = "0.2.2"
input = "0.5.0"
libc = "0.2"
rust-ini = "0.15"
linicon = "0.4.1"
cached = "0.13.1"
serde = { version = "1.0.112", features = ["derive"] }
serde_json = "1.0"
inotify = "0.8.3"
keycode = "0.3.0"
i3ipc = "0.10.1"
itertools = "0.9.0"
directories = "3.0.1"
config = "0.10.1"
nix = "0.20.0"
subprocess = "0.2.6"
signal-hook =  { version = "0.3.8", features = ["extended-siginfo"] }